
// Code generated - DO NOT EDIT.
// This file is a generated protocol buffer definition and any manual changes will be lost.
syntax = "proto3";
package MCD_GOV;

import "google/protobuf/timestamp.proto";
option go_package = "blep.ai/data/connectors/makerdao/smart-contracts/MCD_GOV";

message Transfer {
	google.protobuf.Timestamp ts = 1;
	bytes From = 2;		//	address
	bytes To = 3;		//	address
	bytes Value = 4;		//	uint256
}

message Approval {
	google.protobuf.Timestamp ts = 1;
	bytes Owner = 2;		//	address
	bytes Spender = 3;		//	address
	bytes Value = 4;		//	uint256
}

message Mint {
	google.protobuf.Timestamp ts = 1;
	bytes Guy = 2;		//	address
	bytes Wad = 3;		//	uint256
}

message Burn {
	google.protobuf.Timestamp ts = 1;
	bytes Guy = 2;		//	address
	bytes Wad = 3;		//	uint256
}

message LogSetAuthority {
	google.protobuf.Timestamp ts = 1;
	bytes Authority = 2;		//	address
}

message LogSetOwner {
	google.protobuf.Timestamp ts = 1;
	bytes Owner = 2;		//	address
}

message LogNote {
	google.protobuf.Timestamp ts = 1;
	bytes Sig = 2;		//	bytes4
	bytes Guy = 3;		//	address
	bytes Foo = 4;		//	bytes32
	bytes Bar = 5;		//	bytes32
	bytes Wad = 6;		//	uint256
	bytes Fax = 7;		//	bytes
}
